src/main/kotlin/com/example/worktimemanagement/error/EmailAlreadyExistsException.kt
package com.example.worktimemanagement.error

class EmailAlreadyExistsException(message: String) : RuntimeException(message)